# task-reminder

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  icon.icns  index.html  package.json  sonar-project.properties  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
prompt/: agent0.md  agent1.md  agent2.md  agent3.md  agent4.md  agent5.md  agent6.md  agent7.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: error.rs  main.rs
src-tauri/src/commands/: mod.rs  reminder_commands.rs  settings_commands.rs  tag_commands.rs  task_commands.rs
src-tauri/src/db/: connection.rs  migration_001_remove_repeat_interval_constraint.sql  mod.rs  schema.sql  seed.rs
src-tauri/src/models/: mod.rs  reminder.rs  settings.rs  task.rs
src-tauri/src/notification/: mod.rs
src-tauri/src/repositories/: mod.rs  reminder_repository.rs  task_repository.rs
src-tauri/src/services/: mod.rs  notification_service.rs  reminder_service.rs  task_service.rs  task_service_test.rs
src/app/hooks/: useDebounce.ts  useFocusTrap.ts  useListKeyboardNavigation.ts  useReminderNotifications.ts  useTaskSync.ts
src/app/providers/: AppProvider.tsx  ThemeProvider.tsx  index.ts
src/app/routes/: index.tsx
src/app/store/: index.ts  reminderStore.test.ts  (+9 more)
src/integration/: reminderNotification.integration.test.tsx  taskCreation.integration.test.tsx
src/test/: setup.ts
(+46 files in other folders)
